--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.application.name=course_mania
 # spring.jpa.show-sql=true
 
 # DataSource settings
-spring.datasource.url= jdbc:postgresql://ep-raspy-heart-a5hp3cwx.us-east-2.aws.neon.tech/course?user=demodb_owner&password=F7JOSRhxPl5H&sslmode=require
+spring.datasource.url= jdbc:postgresql://ep-snowy-waterfall-a4xsgfe3.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=s41QUxbjzTDZ&sslmode=require
 # spring.datasource.username=demodb_owner
 # spring.datasource.password=F7JOSRhxPl5H
 spring.datasource.driver-class-name=org.postgresql.Driver
