--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,7 +10,7 @@ RUN npm run build
 FROM ubuntu
 RUN apt-get update
 RUN apt-get install nginx -y
-COPY --from=build /app/dist /var/www/html/
+# COPY --from=build /app/dist /var/www/html/
 EXPOSE 80
 CMD ["nginx","-g","daemon off;"]
 
